# opendal

./: .gitignore  CHANGELOG.md  README.md
bindings/c/: .gitignore  CMakeLists.txt  Cargo.toml  build.sh  rust-toolchain.toml
bindings/c/examples/: basic.cpp
bindings/c/include/: opendal.h
bindings/c/src/: async_multipart_writer.rs  async_operator.rs  common.rs  deleter.rs  entry.rs  error.rs  lib.rs  lister.rs  metadata.rs  multipart_writer.rs  operator.rs  operator_info.rs  reader.rs  result.rs  types.rs  writer.rs
bindings/c/tests/: bdd.cpp  common.hpp  list.cpp  network_disrupt.hpp  obdal_async_test.cpp  obdal_retry_test.cpp  obdal_test.cpp  obdal_test.h  obdal_worm_test.cpp
bindings/nodejs/: pnpm-lock.yaml
core/: Cargo.toml  README.md
core/examples/list-test/: Cargo.toml
core/examples/list-test/src/: main.rs
core/examples/multi-version-list/: Cargo.toml
core/examples/multi-version-list/src/: main.rs
core/src/layers/: blocking.rs  capability_check.rs  complete.rs  concurrent_limit.rs  correctness_check.rs  error_context.rs  fastrace.rs  immutable_index.rs  logging.rs  mod.rs  obguard.rs  retry.rs  timeout.rs  tracing.rs  type_eraser.rs
core/src/layers/observe/: metrics.rs
core/src/raw/: accessor.rs  enum_utils.rs  layer.rs  mod.rs  operation.rs  ops.rs  rps.rs
core/src/raw/adapters/kv/: backend.rs
core/src/raw/adapters/typed_kv/: backend.rs
core/src/raw/http_util/: client.rs  error.rs
core/src/raw/oio/delete/: api.rs  batch_delete.rs  one_shot_delete.rs
core/src/raw/oio/list/: flat_list.rs
core/src/raw/oio/write/: api.rs  append_write.rs  block_write.rs  mod.rs  multipart_write.rs  one_shot_write.rs  position_write.rs
core/src/raw/retry/: backoff.rs  blocking_retry.rs  blocking_retry_with_context.rs  mod.rs  retry.rs  retry_with_context.rs
core/src/raw/tests/: utils.rs
core/src/services/: mod.rs
core/src/services/azblob/: backend.rs  config.rs  core.rs  error.rs  mod.rs  multipart_writer.rs  writer.rs
core/src/services/fs/: backend.rs  writer.rs
core/src/services/http/: backend.rs
core/src/services/oss/: backend.rs  config.rs  core.rs  error.rs  writer.rs
core/src/services/s3/: backend.rs  config.rs  core.rs  delete.rs  error.rs  lister.rs  writer.rs
core/src/types/: error.rs  list.rs  mod.rs  scheme.rs
core/src/types/blocking_ob_multipart_write/: blocking_ob_multipart_writer.rs  mod.rs
core/src/types/blocking_read/: blocking_reader.rs
core/src/types/blocking_write/: blocking_writer.rs
core/src/types/context/: mod.rs  ob_multipart_write.rs  write.rs
core/src/types/delete/: blocking_deleter.rs
core/src/types/ob_multipart_write/: mod.rs  ob_multipart_writer.rs
core/src/types/operator/: blocking_operator.rs  builder.rs  operator.rs  operator_functions.rs  operator_futures.rs
core/src/types/read/: reader.rs
rpm/: c-binding-build.sh  c-binding.spec  obdal-build.sh  obdal.spec
website/: pnpm-lock.yaml
